@@ -1,4 +1,4 @@
-/*	$NetBSD: bozohttpd.h,v 1.33.2.2.2.1 2016/04/15 18:55:49 snj Exp $	*/
+/*	$NetBSD: bozohttpd.h,v 1.33.2.2.2.2 2016/12/23 07:47:40 snj Exp $	*/
 
 /*	$eterna: bozohttpd.h,v 1.39 2011/11/18 09:21:15 mrg Exp $	*/
 
@@ -366,5 +366,7 @@ bozoheaders_t *addmerge_replheader(bozo_httpreq_t *, const char *,
 /* variables */
 int bozo_set_pref(bozohttpd_t *, bozoprefs_t *, const char *, const char *);
 char *bozo_get_pref(bozoprefs_t *, const char *);
+
+int bozo_get_version(char */*buf*/, size_t /*size*/);
 
 #endif	/* BOZOHTTOPD_H_ */
